Fixing calendar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -422,12 +422,10 @@ body {
 }
 
 .rbc-event-content {
-  display: -webkit-box;
-  line-clamp: 2;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
   overflow: hidden;
   white-space: normal !important;
+  word-break: break-word;
+  max-height: 2.6em;
   line-height: 1.3;
 }
 
